trnasition and alignments fixes

--- a/styles.css
+++ b/styles.css
@@ -990,7 +990,7 @@ width: 50%;
     background-image: url('assets/lines-footer.png');
     background-size: cover;
     background-position: center;
-    padding: 50px 0 20px;
+    padding: 40px 0 0px;
 }
 
 
@@ -1050,7 +1050,6 @@ width: 50%;
 
 .footer-contact li {
     color: #ccc;
-    margin-bottom: 15px;
     display: flex;
     align-items: flex-start;
 }
@@ -1568,6 +1567,34 @@ width: 50%;
 }
 
 .gradient-icon-circle i {
+    position: relative;
+    z-index: 2;
+    font-size: 24px;
+}
+
+
+  .gradient-icon-contact {
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(90deg, #5F2DEE 0%, #B882FC 100%);
+    padding: 5px;
+    margin-bottom: 20px;
+}
+
+.gradient-icon-contact::before {
+    content: "";
+    position: absolute;
+    inset: 5px; 
+    border-radius: 50%;
+    background: white;
+}
+
+.gradient-icon-contact i {
     position: relative;
     z-index: 2;
     font-size: 24px;
@@ -2178,4 +2205,40 @@ width: 50%;
 
 .service-delay-2 {
     transition-delay: 0.3s;
+}
+
+
+.benefits-content-wrapper {
+    opacity: 0;
+    transform: translateX(-30px);
+    transition: all 0.6s cubic-bezier(0.215, 0.61, 0.355, 1);
+    transition-delay: 1s; 
+}
+
+.benefits-content-wrapper.animate {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.animate-from-right {
+    opacity: 0;
+    transform: translateX(50px);
+    transition: all 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.animate-from-right.animate {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+
+.animate-from-top {
+    opacity: 0;
+    transform: translateY(-50px);
+    transition: all 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.animate-from-top.animate {
+    opacity: 1;
+    transform: translateY(0);
 }
